--- a/action.yml
+++ b/action.yml
@@ -15,12 +15,12 @@ inputs:
     description: "Enable searching for pre-release versions of Visual Studio/MSBuild"
     required: false
   vs-architecture:
-    description: "The preferred processor architecture of MASM. Can be either 'x86' or 'x64'. 'x64' is only available from Visual Studio version 17.0 and later."
+    description: "The preferred processor architecture of MASM. Can be either 'x86', 'x64' or 'arm64'. 'x64' is only available from Visual Studio version 17.0 and later."
     required: false
     default: "x64"
 outputs:
   masmPath:
-    description: "The resulting location of ml (x86) or ml64 (x64) for your inputs"
+    description: "The resulting location of ml (x86), ml64 (x64) or armasm64 (arm64) for your inputs"
 
 runs:
   using: "node20"
